# zzday

./: .gitignore  AGENT_INSTRUCTIONS.md  GIT_STRATEGY.md  MERGE_STRATEGY.md  README.md  merge-all-force.sh  merge-all-theirs.sh  resolve-all-conflicts.sh
backend/: .gitignore  .pre-commit-config.yaml  DOMAIN_COMPLETION_REPORT.md  Makefile  agent_0_pipeline.py  analyze_graphql.py  check_types.py  cicd_validation_report.json  convert_interfaces.py  fix_protocols.py  fix_remaining_imports.py  fix_service_imports.py  mypy.ini  pyproject.toml  pytest.ini  requirements-tasks.txt  run_tests.sh  test_domain_enhancements.py  test_domain_imports.py  trigger_cicd_test.txt  verify_complete_integration.py  verify_coverage.py  verify_identity_imports.py  verify_service_implementations.py  verify_structure.py
backend/.github/workflows/: agent-ci.yml  ci-cd.yml  main-ci.yml
backend/app/: .env.example  AGENT_1_IMPLEMENTATION_REPORT.md  README.md  __init__.py  check_types.py  docker-compose.test.yml  main.py  pyrightconfig.json  pytest.ini  settings.json  smart-lint.sh
backend/app/alembic/: alembic.ini  env.py
backend/app/bootstrap/: __init__.py  audit_bootstrap.py  identity_bootstrap.py  integration_bootstrap.py  notification_bootstrap.py
backend/app/config/: Makefile  README.md  api_docs.py  test_config.py
backend/app/config/dagger/: __init__.py  main.py  requirements.txt
backend/app/config/docker/: .!13605!docker-compose test.yml  Dockerfile  Dockerfile.ci  Dockerfile.dev  README.md  docker-compose test.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
backend/app/config/requirements/: base.txt  dev.txt  prod.txt  requirements.txt  test.txt
backend/app/config/scripts/: celery_beat.py  celery_worker.py  deploy-automation.sh  entrypoint.sh  health-check.sh  monitor-deployment.sh  start_tasks.sh  wait-for-it.sh
backend/app/core/: __init__.py  api_docs.py  authentication.py  cache.py  celery_config.py  config.py  constants.py  database.py  dependencies.py  enums.py  errors.py  logging.py  monitoring.py  security.py
backend/app/core/application/: __init__.py  base.py
backend/app/core/constants/: auth.py
backend/app/core/contracts/: __init__.py  base.py  registry.py
backend/app/core/cqrs/: __init__.py  base.py
backend/app/core/domain/: __init__.py  base.py  contracts.py  specification.py
backend/app/core/events/: __init__.py  bus.py  cross_module.py  docker_config.py  handlers.py  registry.py  serialization.py  tracking.py  types.py
backend/app/core/infrastructure/: __init__.py  cache_coordinator.py  circuit_breaker.py  database_optimizer.py  internal_adapter_base.py  multi_level_cache.py  optimized_sql_repository.py  performance_tests.py  redis_cache_backend.py  repository.py  resilience.py  specification.py  transaction.py  unit_of_work.py
backend/app/core/middleware/: __init__.py  auth.py  rate_limiter.py
backend/app/core/monitoring/: __init__.py  metrics.py
backend/app/core/repositories/: __init__.py  base.py  enhanced_base.py  factory.py  (+2 more)
backend/app/examples/: outbox_unit_of_work_integration.py
backend/app/models/: outbox_event.py
backend/app/modules/: Users_neuro_workspace2_app-codebase_ezzday_backend_app_modules_identity_domain_entities_tree.txt  Users_neuro_workspace2_app-codebase_ezzday_backend_app_modules_identity_domain_interfaces_tree.txt  Users_neuro_workspace2_app-codebase_ezzday_backend_app_modules_identity_domain_services_tree.txt  collect_files.sh
backend/app/outbox/: README.md
backend/app/presentation/: __init__.py
backend/app/repositories/: outbox_repository.py
backend/app/services/: outbox_processor.py
backend/app/shared/: __init__.py
backend/app/tasks/: __init__.py  audit_tasks.py  identity_tasks.py  integration_tasks.py  monitoring.py  notification_tasks.py
backend/app/tests/: conftest.py  test_identity_adapters.py  test_outbox_event.py  test_outbox_repository_adapter.py
backend/app/utils/: __init__.py  crypto.py  date.py  serialization.py  testing.py  text.py  validation.py
backend/architecture_tests/: test_architecture_compliance.py
backend/ci/scripts/: build-dashboard.py  quality_gates.py  setup-agent-environment.sh  validate_agent_scope.py
backend/docs/: TASKS.md  core-architecture-analysis.md  identity-dependency-mapping.py  identity-integration-checklist.md
backend/migrations/: 20250109_optimize_database_indexes.py  __init__.py  runner.py  standalone_db_optimizer.py
backend/scripts/: daily_health_report.py  fix_repository_contracts.py  fix_repository_contracts_simple.py  run_database_optimization.py  run_security_tests.py  validate_cicd_integration.py
backend/scripts/architecture/: validate_architecture.py
backend/tests/: test_outbox_event.py  test_outbox_processor.py  test_outbox_repository_adapter.py
(+1317 files in other folders)
